Removed .VS folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(WebsocketChat)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+include_directories(websocketpp)
+
 add_executable(WebsocketChat main.cpp)
