--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "websocketpp"]
 	path = websocketpp
 	url = https://github.com/zaphoyd/websocketpp/
+[submodule "carbon-lang"]
+	path = carbon-lang
+	url = https://github.com/carbon-language/carbon-lang
