Bugfix auto amalgamate build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,11 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 
-find_package( PythonInterp 3.0 REQUIRED )
+unset(${PROJECT_SOURCE_DIR}/include/json/dist/jsoncpp.cpp CACHE)
+if (NOT EXISTS ${PROJECT_SOURCE_DIR}/include/json/dist/jsoncpp.cpp)
+    find_package(Python COMPONENTS Interpreter REQUIRED)
+    execute_process(COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/build.py ${CMAKE_CURRENT_SOURCE_DIR})
+endif ()
 
 ## Enable all compiler warnings
 if (MSVC)
@@ -49,12 +53,3 @@ set_target_properties(server PROPERTIES
         ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
         LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
         RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
-
-add_custom_target(
-        run ALL
-        COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/build.py ${CMAKE_CURRENT_SOURCE_DIR}
-        BYPRODUCTS jsoncpp.cpp
-        COMMENT "Generating amalgamated sources"
-)
-
-add_dependencies(server run)
