--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,18 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 
-unset(${PROJECT_SOURCE_DIR}/include/json/dist/jsoncpp.cpp CACHE)
-if (NOT EXISTS ${PROJECT_SOURCE_DIR}/include/json/dist/jsoncpp.cpp)
-    find_package(Python COMPONENTS Interpreter REQUIRED)
-    execute_process(COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/build.py ${CMAKE_CURRENT_SOURCE_DIR})
-endif ()
+
+# execute_process(COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/build.py ${CMAKE_CURRENT_SOURCE_DIR})
+#if(NOT AMALGATED_SOURCES)
+find_package( PythonInterp 3.0 REQUIRED )
+add_custom_command(
+        OUTPUT ${PROJECT_SOURCE_DIR}/include/json/dist/jsoncpp.cpp
+        COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/build.py ${CMAKE_CURRENT_SOURCE_DIR}
+        DEPENDS ${PROJECT_SOURCE_DIR} src/server.cpp
+        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+)
+#set(AMALGATED_SOURCES TRUE CACHE BOOL "Has the download happened?" FORCE)
+#endif()
 
 ## Enable all compiler warnings
 if (MSVC)
