Setup tests with dummy test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,14 @@ if (MINGW)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc -static-libstdc++")
 endif()
 
+find_package(Boost COMPONENTS system filesystem unit_test_framework REQUIRED)
+add_executable(testTheTester test/chatserver_test.cpp)
+target_link_libraries(testTheTester
+${Boost_FILESYSTEM_LIBRARY}
+${Boost_SYSTEM_LIBRARY}
+${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
+add_test(tester tester)
+
 # Force WebSocket++ to use 100% C++11 mode, so that it doesn't try to look for Boost
 # (Note that under MinGW, Boost.Thread is still required, due to a bug in MinGW that prevents the C++11 version from being used)
 add_definitions(-D_WEBSOCKETPP_CPP11_STRICT_)
