--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,8 +21,13 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v4.5.0
       with:
-        python-version: '3.10' 
-    
+        python-version: '3.10'
+    - name: Download and install Boost
+      uses: MarkusJx/install-boost@v2.4.3
+      with:
+        boost_version: '1.81.0'
+        platform_version: '18.04'
+        
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
