--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,16 +28,24 @@ jobs:
         boost_version: '1.81.0'
         platform_version: '18.04'
         
-    - name: Configure CMake
+    #- name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      #run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
-    - name: Build
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+    - name: Configure CMake
+      run: |
+        cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build\
+        -DBoost_INCLUDE_DIR=${{steps.install-boost.outputs.BOOST_ROOT}}/include\
+        -DBoost_LIBRARY_DIRS=${{steps.install-boost.outputs.BOOST_ROOT}}/lib
       env:
         BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+
+    #- name: Build
+      # Build your program with the given configuration
+     # run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+     # env:
+      #  BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
 
     #- name: Test
      # working-directory: ${{github.workspace}}/build
