--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -14,12 +14,8 @@ jobs:
     - name: Download and install Boost
       uses: MarkusJx/install-boost@v2.4.3
       with:
-        boost_version: "1.73.0"
-    
-    
-     #   boost_version: 1.81.0
-      #  boost_install_dir: C:\local
-       # platform_version: 2022
-        #toolset: msvc
-
+        boost_version: "1.81.0"
+        boost_install_dir: C:\local
+        platform_version: 2022
+        toolset: msvc
 
