--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,10 +20,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Setup Python
-      - uses: actions/setup-python@v4
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: python build.py
+        run: python build.py
       - name: Install boost
         uses: MarkusJx/install-boost@v2.4.1
         id: install-boost
