--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Amalgamate sources
         run: python build.py
       - name: Install boost
         uses: MarkusJx/install-boost@v2.4.1
