--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,6 +19,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Pull submodules
+        run: git submodule update --init
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
