--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -7,14 +7,10 @@ on:
     branches: [ "main" ]
 
 env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
 
 jobs:
   build:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
 
     steps:
@@ -29,35 +25,19 @@ jobs:
         uses: MarkusJx/install-boost@v2.4.1
         id: install-boost
         with:
-          # REQUIRED: Specify the required boost version
-          # A list of supported versions can be found here:
-          # https://github.com/MarkusJx/prebuilt-boost/blob/main/versions-manifest.json
           boost_version: 1.81.0
-          # OPTIONAL: Specify a platform version
           platform_version: 18.04
-          # OPTIONAL: Specify a custom install location
-          #  boost_install_dir: /home/runner/some_directory
-          # OPTIONAL: Specify a toolset
           toolset: gcc
-          # OPTIONAL: Specify an architecture
           arch: x86
-
-        # this build step will fail
-      - name: Configure CMake
-        # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-        # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      - name: Configure CMake in a 'build' subdirectory.
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
 
 
-      - name: Build
+      - name: Build project
         # Build your program with the given configuration
         run: cmake --build ${{github.workspace}}/build
 
-        #    - name: Test
-        #      working-directory: ${{github.workspace}}/build
-        # Execute tests defined by the CMake configuration.
-        # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-#      run: ctest -C ${{env.BUILD_TYPE}}
-
+      - name: Run tests
+        working-directory: ${{github.workspace}}/build
