--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,16 +29,14 @@ jobs:
           platform_version: 18.04
           toolset: gcc
           arch: x86
-      - name: Configure CMake in a 'build' subdirectory.
+      - name: Load Project with CMake
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
 
 
       - name: Build project
-        # Build your program with the given configuration
         run: cmake --build ${{github.workspace}}/build
 
       - name: Run tests
-        #working-directory: ${{github.workspace}}/bin
-        run: ./bin/unit_test
+        run: ./bin/unit_test --log_level=all
